Modifications mineures de certains textes et de la mise en page de l'export PDF

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -8,13 +8,8 @@
         forestiers.</p>
       <p>
         Foreg est en version BETA et fournit les informations sur les espaces protégés pour la biodiversité, les abords
-        de monuments historiques et les espaces boisés classés à conserver.
+        de monuments historiques et les espaces boisés classés à conserver ainsi que sur la présence ou non de tronçons de cours d'eau.
       </p>
-
-      <!-- <dsfr-buttons-group inline="always" iconPosition="left">
-        <dsfr-button label="Découvrir" variant="secondary" icon="fr-icon-info-fill" iconPosition="left"></dsfr-button>
-        <dsfr-button label="Créer mon compte" icon="fr-icon-arrow-right-fill" iconPosition="left"></dsfr-button>
-      </dsfr-buttons-group> -->
 
       <dsfr-buttons-group inline="always" iconPosition="left">
         <dsfr-button label="Démarrer" icon="fr-icon-arrow-right-fill" iconPosition="left"
@@ -31,24 +26,13 @@
 
 </div>
 
-<!-- 
-<div class="fr-container fr-mt-4v fr-mb-4v">
-
-  <dsfr-buttons-group inline="always" iconPosition="left">
-    <dsfr-button label="Démarrer" icon="fr-icon-arrow-right-fill" iconPosition="left"
-      (click)="newRequete()"></dsfr-button>
-  </dsfr-buttons-group>
-
-</div>
--->
-
 <div class="fr-container fr-mt-4v fr-mb-8v">
 
   <h2>Trouver la réglementation applicable dans une forêt et contribuer à préserver la biodiversité</h2>
   <ul>
     <li>
       Les activités et travaux réalisés en forêts peuvent avoir un impact sur
-      l’environnement et les paysages.
+      l'environnement et les paysages.
     </li>
     <li>
       Des réglementations ont été édictées pour préserver les enjeux liés à cet impact.
