--- a/src/app/shared-thematic/components/synthese/synthese.component.html
+++ b/src/app/shared-thematic/components/synthese/synthese.component.html
@@ -5,27 +5,18 @@
     n'a été identifié parmi ceux intégrés à l'outil FOREG :
   </p>
   <ul>
-    <li>les aires protégées en faveur de la protection de l'environnement et de la préservation de la biodiversité</li>
+    <li>les aires protégées en faveur de la protection de l'environnement</li>
     <li>les sites et les abords des monuments historiques inscrits ou classés</li>
+    <li>les tronçons de cours d'eau</li>
   </ul>
   <p>
     La version actuelle de FOREG ne permet pas de déterminer si le périmètre saisi est concerné par d'autres
     réglementations.
   </p>
 
-} @else {
-
-  <h3 class="fr-h6">Conseils pour instruire vos travaux</h3>
-
-  <ul>
-    <li>
-      Si votre chantier nécessite de contacter divers établissements
-      un ordre sera à respecter pour éviter les allers-retours.
-    </li>
-  </ul>
-
+} 
+@else {
   @for (thematic of thematics; track $index; let first = $first) {
-
     @if (!first) {
       <h3 class="fr-h6">{{thematic.label}}</h3>
       @if (checkThematicFeatures(thematic)) {
