--- a/src/app/requete/pages/requete-new/requete-new.component.html
+++ b/src/app/requete/pages/requete-new/requete-new.component.html
@@ -21,7 +21,7 @@
     <div class="fr-upload-group">
       <label class="fr-label" for="upload-id-contour">
         Importation de contour 
-        <span class="fr-hint-text">Indication : taille maximale : 10 Mo. Format supporté : zip(geojsons/shapefile), shapefile, geojsons.</span>
+        <span class="fr-hint-text">Indication : taille maximale : 10 Mo. Formats supportés : zip (GeoJSON/shapefile), shapefile, GeoJSON.</span>
       </label>
       <input 
         class="fr-upload" 
