--- a/src/app/pages/informations/informations.component.html
+++ b/src/app/pages/informations/informations.component.html
@@ -21,11 +21,11 @@
       @if(theme.name == 'patrimoine') {
         <br>
         <p>
-          Les données relatives aux espaces boisés classés à conserver ou à créer (EBC) en vertu de l'article L.113-1 du code de l'urbanisme, sont issues des plans locaux d'urbanisme (PLU) déposés par les collectivités sur le géoportail de l'urbanisme.
+          Les données relatives aux espaces boisés classés à conserver ou à créer (EBC) en vertu de l'article L.113-1 du code de l'urbanisme, sont issues des plans locaux d'urbanisme (PLU) déposés par les collectivités sur le Géoportail de l'urbanisme.
           <br>          
           Les PLU rendus exécutoires avant le 31/12/2022 sont opposables même s'ils n'ont pas été publiés sur le Géoportail de l'urbanisme. 
           <br>
-          Par conséquent si l'interrogation de FoReg ne renvoit pas de résultat d'EBC, il convient de vérifier auprès de la commune concernée si elle est dotée d'un PLU n'ayant pas été publié au géoportail de l'urbanisme.
+          Par conséquent si l'interrogation de Foreg ne renvoie pas de résultat sur les EBC, il convient de vérifier auprès de la commune concernée si elle est dotée d'un PLU n'ayant pas été publié sur le Géoportail de l'urbanisme.
         </p>
       }
     }
